--- a/src/main/resources/templates/Search-sequence-Result.html
+++ b/src/main/resources/templates/Search-sequence-Result.html
@@ -7,24 +7,24 @@
 		<meta name="format-detection" content="telephone=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<!-- Fonts-->
-		<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="./static/assets/css/reset.css">
 		<!-- 引入fonts -->
-		<link rel="stylesheet" href="./assets/css/font-awesome.min.css">
+		<link rel="stylesheet" href="./static/assets/css/font-awesome.min.css">
 		<!-- Vendors-->
-		<link rel="stylesheet" type="text/css" href="./assets/vendors/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./static/assets/vendors/bootstrap/bootstrap.min.css">
 		<!-- css -->
-		<link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+		<link rel="stylesheet" type="text/css" href="./static/assets/css/main.css">
 		<!-- 引入js -->
-		<script src="./assets/vendors/_jquery/jquery-3.3.1.min.js"></script>
-		<script src="./assets/vendors/bootstrap/bootstrap.min.js"></script>
+		<script src="./static/assets/vendors/_jquery/jquery-3.3.1.min.js"></script>
+		<script src="./static/assets/vendors/bootstrap/bootstrap.min.js"></script>
 </head>
 <body>
 <!-- 定义头部 -->
 	<div class="head">
 		<div class="head-bg-img">
-			<img src="./assets/img/head-bg.png" alt="">
+			<img src="./static/assets/img/head-bg.png" alt="">
 		<div class="logo">
-			<img src="./assets/img/logo-shadow.png" alt="">
+			<img src="./static/assets/img/logo-shadow.png" alt="">
 		</div>
 		</div>
 		
@@ -37,15 +37,15 @@
 					BROWSE
 				</a>
 					<ul class="dropdown-menu">
-					<li><a href="#">Commpound</a></li>
-					<li><a href="#">Pathway</a></li>
-					<li><a href="#">Target</a></li>
+						<li><a href="/Browse_C">Commpound</a></li>
+						<li><a href="/Browse_P">Pathway</a></li>
+						<li><a href="/Browse_T">Target</a></li>
 				</ul>
 				
 			</li>
 		<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">SEARCH</a>
 			<ul class="dropdown-menu">
-					<li><a href="#">Text</a></li>
+					<li><a href="/Search_text">Text</a></li>
 					<li><a href="#">Structure</a></li>
 					<li><a href="#">Sequence</a></li>
 					
@@ -70,8 +70,8 @@
 </div>
 <div class="page"></div>
 <!-- 引入分页js -->
-<script src="./assets/vendors/_jquery/jquery-3.3.1.min.js"></script>
-<script src="./assets/js/compound.js"></script>
+<script src="./static/assets/vendors/_jquery/jquery-3.3.1.min.js"></script>
+<script src="./static/assets/js/compound.js"></script>
 <script>
 	$(document).ready(function(){
 		$.ajax({
